Fixed alignment of Roles

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -30,3 +30,7 @@
     @extend %max-section-width;
     margin: 0 auto;
 }
+
+.role {
+    text-align: left;
+}
