--- a/scss/main.css
+++ b/scss/main.css
@@ -49,6 +49,10 @@
   margin: 0 auto;
 }
 
+.role {
+  text-align: left;
+}
+
 body, html {
   height: 100%;
   margin: 0;
